--- a/partials/results.html
+++ b/partials/results.html
@@ -4,9 +4,9 @@
       <a href="#" class="list-group-item">
         <h4 class="list-group-item heading">
           {{movie.title}}
-          <img src="{{movie.poster}}"></img>
+          <img class="imageSize" src="{{movie.poster}}"></img>
         </h4>
-        <p class="list-group-item-text">
+        <p class="list-group-item-text blueYear">
           {{movie.year}}
         </p>
       </a>
